
* Version 1.1.0-rc2:
 - The Android build script has been fixed.
 - Plugin examples have been updated.
 - Memory leaks when fetching certificates have been fixed, a
   use-after-free has been fixed, uninitialized variables have been
   initialized, fixing support for plugins on non-OSX systems. Updating
   is recommended, especially on Windows.
 - The plugin API has been documented.

* Version 1.1.0-rc1:
 - dnscrypt-proxy can now use plugins in order to alter/inspect
   queries and responses before and after they are relayed.
 - The default max payload size has been trimmed down to 1252 bytes
   for compatibility with some scary network setups.
 - The --local-port and --resolver-port options are gone for good.
   They had been deprecated for a while.
 - Multiple certificates are now properly handled.

* Version 1.0.1:
 - dnscrypt-proxy and hostip can now be compiled for Android and
   Solaris.
 - The proxy can now run as a Windows service. The new --install and
   --uninstall command-line switches can automatically register the proxy
   as a service. Startup options are read from the Windows registry.
   See the README-WINDOWS.markdown file for details.

* Version 1.0:
 - Autotools scripts have been improved.
 - 1.0.

* Version 0.12:
 - Datagrams are resent after running out of memory, or if the queue
   was full.
 - Missing compilation flags broke 0.11 on some Linux distributions.
   This has been fixed.

* Version 0.11:
 - A new tool, hostip, can resolve host names before dnscrypt-proxy is
   started. This should help resolving chicken-and-egg problems on
   routers, as reported by LanceThePants.
 - The --local-port and --resolver-port options have been deprecated.
   Please use --local-address=<ip>:<port> and
   --resolver-address=<ip>:<port> instead.
 - Improved stability on Win32.

* Version 0.10.1:
 - The daemon didn't start on some Linux distributions lacking the
   RANDOM_UUID sysctl. This has been fixed.